extends Control

# Called when the node enters the scene tree for the first time.
func _ready():
	pass # Replace with function body.

# Called every frame. 'delta' is the elapsed time since the previous frame.
func _process(delta):
	pass
	
	
func _on_texture_button_pressed():
	get_tree().change_scene_to_file("res://ร้านอาหารที่ 2/ร้านอาหารทะเล.tscn")
	$Sound1.play()

func _on_texture_button_2_pressed():
	get_tree().change_scene_to_file("res://ร้านอาหารที่ 2/ร้านอาหารทะเล.tscn")
	$Sound1.play()
	
func _on_texture_button_3_pressed():
	get_tree().change_scene_to_file("res://ร้านอาหารที่ 2/ร้านอาหารทะเล.tscn")
	$Sound1.play()
	
func _on_texture_button_4_pressed():
	get_tree().change_scene_to_file("res://ร้านอาหารที่ 2/ร้านอาหารทะเล.tscn")
	$Sound1.play()
	
func _on_texture_button_5_pressed():
	get_tree().change_scene_to_file("res://ร้านอาหารที่ 2/ร้านอาหารทะเล.tscn")
	$Sound1.play()
	
func _on_texture_button_6_pressed():
	get_tree().change_scene_to_file("res://ซีนต่างๆ/node_2d.tscn")
	$Sound1.play()
	
func _on_texture_button_7_pressed():
	get_tree().change_scene_to_file("res://ซีนต่างๆ/node_2d.tscn")
	$Sound1.play()
	
func _on_texture_button_8_pressed():
	get_tree().change_scene_to_file("res://ซีนต่างๆ/node_2d.tscn")
	$Sound1.play()
	
func _on_texture_button_9_pressed():
	get_tree().change_scene_to_file("res://ซีนต่างๆ/node_2d.tscn")
	$Sound1.play()
	
func _on_texture_button_10_pressed():
	get_tree().change_scene_to_file("res://ซีนต่างๆ/node_2d.tscn")
	$Sound1.play()
